# zxplorer

./: .gitignore  .gitmodules  README.md
quizx-wasm/: .gitignore  Cargo.toml  build-wasm.sh  build.sh  patch-wasm.js
quizx-wasm/src/: lib.rs
zxplorer-web/: index.html  package-lock.json  package.json  vite.config.ts
zxplorer-web/core/clipboard/: ClipboardManager.ts
zxplorer-web/core/graph/: GraphOperations.ts  SimplificationRules.ts
zxplorer-web/core/history/: UndoRedoManager.ts
zxplorer-web/core/types/: ZXGraphTypes.ts
zxplorer-web/core/utils/: ColorUtils.ts  CoordinateUtils.ts  GeometryUtils.ts
zxplorer-web/src/: App.css  App.tsx
zxplorer-web/src/utils/: exampleGraphs.ts
zxplorer-web/web/components/: ZXDiagram.css  ZXDiagram.tsx
zxplorer-web/web/rendering/: DiagramRenderer.tsx
