# WebAssembly bindings for QuiZX
#
# Note: These bindings should be upstreamed to quizx/jsbindings/
# See: https://github.com/zxcalc/quizx/issues/185

[package]
name = "quizx-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
quizx = { path = "../quizx/quizx" }
wasm-bindgen = "0.2.105"
