# WebAssembly bindings for QuiZX
#
# Note: These bindings should be upstreamed to quizx/jsbindings/
# See: https://github.com/zxcalc/quizx/issues/185

[package]
name = "quizx-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
quizx = { path = "../quizx/quizx" }
wasm-bindgen = "0.2.105"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
num = "0.4"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O2"]

[profile.release]
opt-level = "z"  # Optimize for size
lto = true

[profile.release.package."*"]
opt-level = "z"
